Bug fixed:  - Indexing  feeding the output of one Add*ToIndex into the other in a wrong way;
 Properties:
 - Add indexing i18n properties

 New:
  - Script download
  - Allow reading bz2 files